[WIP] Integrated Q-Learning AI Training model to play BlackJack, along with SQLite DB integration to save/load Q-Table. Initial Debug configuration added as well.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,8 @@ add_executable(BlackjackAI
     src/Deck.cpp 
     src/Card.cpp 
     src/Hand.cpp
+    src/QLearner.cpp
+    src/Trainer.cpp
 )
 # src/AI.cpp
 
